content/v1.4.5/zh/api/campaign-ext/DecalEntity.md
---
title: "DecalEntity"
---
<!-- BEGIN BREADCRUMB -->
**首页** → **API 目录** → **本领域** → `DecalEntity`
- [← 本领域 / 返回 campaign-ext](./)
- [↑ API 目录](../)
- [🏠 首页 v1.4.5](../../)
- [⭐ 版本架构](../../architecture/)
<!-- END BREADCRUMB -->
# DecalEntity

**命名空间:** SandBox.View.Map
**模块:** SandBox.View
**类型:** `public struct DecalEntity`
**领域:** campaign-ext

## 概述

`DecalEntity` 位于 `SandBox.View.Map`，它的公开成员表明它是这一子系统暴露给 mod 的一个正式扩展或数据入口。

## 心智模型

先从命名空间 `SandBox.View.Map` 判断它属于哪层系统，再看公开方法：如果以 Get/Set 为主，它多半是状态对象；如果以 Create/Apply/Execute 为主，它更像服务或流程入口。

## 主要属性

| Name | Signature |
|------|-----------|
| `GameEntity` | `public GameEntity GameEntity { get; set; }` |
| `Decal` | `public Decal Decal { get; set; }` |
| `RotationChanged` | `public bool RotationChanged { get; }` |
| `PositionChanged` | `public bool PositionChanged { get; }` |
| `Instance` | `public static MapScreen Instance { get; }` |
| `NavigationHandler` | `public INavigationHandler NavigationHandler { get; set; }` |
| `CurrentVisualOfTooltip` | `public MapEntityVisual CurrentVisualOfTooltip { get; }` |
| `PrefabEntityCache` | `public CampaignMapSiegePrefabEntityCache PrefabEntityCache { get; }` |
| `EncyclopediaScreenManager` | `public MapEncyclopediaView EncyclopediaScreenManager { get; }` |
| `IsEscapeMenuOpened` | `public bool IsEscapeMenuOpened { get; }` |
| `MapNotificationView` | `public MapNotificationView MapNotificationView { get; }` |
| `SceneLayer` | `public SceneLayer SceneLayer { get; }` |
| `MapCameraView` | `public MapCameraView MapCameraView { get; }` |
| `MapSceneCursorActive` | `public bool MapSceneCursorActive { get; set; }` |
| `ContourMaskEntity` | `public GameEntity ContourMaskEntity { get; }` |
| `MapCursor` | `public MapCursor MapCursor { get; }` |
| `InactiveLightMeshes` | `public List<Mesh> InactiveLightMeshes { get; }` |
| `ActiveLightMeshes` | `public List<Mesh> ActiveLightMeshes { get; }` |
| `MapScene` | `public Scene MapScene { get; }` |
| `MapState` | `public MapState MapState { get; }` |

## 主要方法

### Create
`public static DecalEntity Create(Scene scene, string material, string entityName = null)`

**用途 / Purpose:** 创建一个 `create` 实例或对象。

### OnHoverMapEntity
`public void OnHoverMapEntity(MapEntityVisual mapEntityVisual)`

**用途 / Purpose:** 当 `hover map entity` 事件触发时调用此方法。

### RemoveMapTooltip
`public void RemoveMapTooltip()`

**用途 / Purpose:** 从当前集合/状态中移除 `map tooltip`。

### ClearGPUMemory
`public void ClearGPUMemory()`

**用途 / Purpose:** 处理 `clear g p u memory` 相关逻辑。

### OnFocusChangeOnGameWindow
`public override void OnFocusChangeOnGameWindow(bool focusGained)`

**用途 / Purpose:** 当 `focus change on game window` 事件触发时调用此方法。

### RemoveMapView
`public void RemoveMapView(MapView mapView)`

**用途 / Purpose:** 从当前集合/状态中移除 `map view`。

### AddEncounterOverlay
`public void AddEncounterOverlay(MenuOverlayType type)`

**用途 / Purpose:** 向当前集合/状态中添加 `encounter overlay`。

### AddArmyOverlay
`public void AddArmyOverlay(MapOverlayType type)`

**用途 / Purpose:** 向当前集合/状态中添加 `army overlay`。

### RemoveEncounterOverlay
`public void RemoveEncounterOverlay()`

**用途 / Purpose:** 从当前集合/状态中移除 `encounter overlay`。

### RemoveArmyOverlay
`public void RemoveArmyOverlay()`

**用途 / Purpose:** 从当前集合/状态中移除 `army overlay`。

### CloseMarriageOfferPopup
`public void CloseMarriageOfferPopup()`

**用途 / Purpose:** 处理 `close marriage offer popup` 相关逻辑。

### OnHourlyTick
`public void OnHourlyTick()`

**用途 / Purpose:** 当 `hourly tick` 事件触发时调用此方法。

### BeginParleyWith
`public void BeginParleyWith(PartyBase party)`

**用途 / Purpose:** 处理 `begin parley with` 相关逻辑。

### OnExit
`public void OnExit()`

**用途 / Purpose:** 当 `exit` 事件触发时调用此方法。

### GetCursorIntersectionPoint
`public void GetCursorIntersectionPoint(ref Vec3 clippedMouseNear, ref Vec3 clippedMouseFar, out float closestDistanceSquared, out Vec3 intersectionPoint, ref PathFaceRecord currentFace, out bool isOnland, BodyFlags excludedBodyFlags = (BodyFlags)79617u)`

**用途 / Purpose:** 获取 `cursor intersection point` 的当前值。

### FastMoveCameraToPosition
`public void FastMoveCameraToPosition(CampaignVec2 target)`

**用途 / Purpose:** 处理 `fast move camera to position` 相关逻辑。

### OnSiegeEngineFrameClick
`public void OnSiegeEngineFrameClick(MatrixFrame siegeFrame)`

**用途 / Purpose:** 当 `siege engine frame click` 事件触发时调用此方法。

### SetIsMapCheatsActive
`public void SetIsMapCheatsActive(bool isMapCheatsActive)`

**用途 / Purpose:** 设置 `is map cheats active` 的值或状态。

### SetIsInTownManagement
`public void SetIsInTownManagement(bool isInTownManagement)`

**用途 / Purpose:** 设置 `is in town management` 的值或状态。

### SetIsInHideoutTroopManage
`public void SetIsInHideoutTroopManage(bool isInHideoutTroopManage)`

**用途 / Purpose:** 设置 `is in hideout troop manage` 的值或状态。

## 使用示例

```csharp
// 先准备该类型需要的上下文，然后直接调用静态入口
DecalEntity.Create(scene, "example", "example");
```

## 参见

- [完整类目录](../catalog)
- [本领域目录](../catalog-campaign)
